Action passes, just polishing

--- a/book.bib
+++ b/book.bib
@@ -1,4 +1,4 @@
-@article{Anderson2001,
+@Article{Anderson2001,
   author =	 {Anderson, Marti J.},
   title =	 {A new method for non-parametric multivariate
                   analysis of variance},
@@ -62,11 +62,10 @@
   number =	 2,
   pages =	 {115--121},
   annote =	 {Was with key: Biobase2015 / BiocGenerics2015},
-  url =
-                  {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html}
+  url =	 {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html}
 }
 
-@article{Kembel2010,
+@Article{Kembel2010,
   author =	 {Kembel Steven W and Cowan Peter D and Helmus Matthew
                   R and Cornwell William K and Morlon Helene and
                   Ackerly David D and Blomberg Simon P and Webb
@@ -97,7 +96,7 @@
   doi =		 {10.1371/journal.pcbi.1004226}
 }
 
-@article{Lahti2014,
+@Article{Lahti2014,
   author =	 {L Lahti and JSalojärvi and A Salonen and
                   M Scheffer and WM de Vos},
   title =	 {Tipping elements in the human intestinal ecosystem},
@@ -131,7 +130,7 @@
                   https://bookdown.org/ajkurz/Statistical\_Rethinking\_recoded/}
 }
 
-@article{McInnes2018,
+@Article{McInnes2018,
   author =	 {McInnes, L and Healy, J and Melville, J},
   title =	 "{UMAP: Uniform Manifold Approximation and Projection
                   for Dimension Reduction}",
@@ -141,7 +140,7 @@
   url =		 {https://arxiv.org/abs/1802.03426},
 }
 
-@article{McMurdie2013,
+@Article{McMurdie2013,
   author =	 {PJ McMurdie and S Holmes},
   title =	 {{\it phyloseq:} An R Package for Reproducible
                   Interactive Analysis and Graphics of Microbiome
@@ -214,7 +213,7 @@
   keywords =	 {bioscience}
 }
 
-@article{Ramos2017,
+@Article{Ramos2017,
   title =	 {Software For The Integration Of Multi-Omics
                   Experiments In Bioconductor},
   author =	 {Marcel Ramos and Lucas Schiffer and Angela Re and
@@ -256,7 +255,7 @@
   doi =		 {10.1038/s41592-019-0654-x}
 }
 
-@article{Anderson2006,
+@Article{Anderson2006,
   author =	 {Anderson, Marti J.},
   title =	 {Distance-based tests for homogeneity of multivariate
                   dispersions},
@@ -267,7 +266,7 @@
   year =	 {2006}
 }
 
-@article{Argelaguet2018,
+@Article{Argelaguet2018,
   author =	 {Argelaguet, Ricard et al.},
   title =	 {Multi-Omics Factor Analysis—a framework for unsupervised integration of multi-omics data sets},
   journal =	 {Molecular Systems Biology},
@@ -278,7 +277,7 @@
   year =	 {2018}
 }
 
-@article{Chao1984,
+@Article{Chao1984,
     author = {Chao A},
     title = {Non-parametric estimation of the number of classes in a population},
     journal = {Scandinavian Journal of Statistics},
@@ -289,7 +288,7 @@
     year =	 {1984}
 }
 
-@article{Chao1992,
+@Article{Chao1992,
     author = {Chao A and Lee SM},
     title = {Estimating the number of classes via sample coverage},
     journal = {Journal of the American statistical Association},
@@ -301,7 +300,7 @@
     year =	 {1992}
 }
 
-@article{Faith1992,
+@Article{Faith1992,
     author = {Faith, D. P.},
     title = {Conservation evaluation and phylogenetic diversity},
     journal = {Biological Conservation},
@@ -388,7 +387,7 @@
   doi =		 {10.1038/nmeth.4468}
 }
 
-@article{Pons2006,
+@Article{Pons2006,
   author =	 {Pons, P and Latapy, M},
   year =	 {2006},
   month =	 01,
@@ -634,7 +633,7 @@
   url =		 {https://CRAN.R-project.org/package=vegan},
 }
 
-@article{Rousseeuw1987,
+@Article{Rousseeuw1987,
   author =	 {Peter J. Rousseeuw},
   title =	 {Silhouettes: A graphical aid to the interpretation
                   and validation of cluster analysis},
@@ -647,7 +646,7 @@
                   {https://www.sciencedirect.com/science/article/pii/0377042787901257},
 }
 
-@article{Salosensaari2021,
+@Article{Salosensaari2021,
   author =	 {Salosensaari, Aaro and Laitinen, Ville and
                   Havulinna, Aki and Méric, Guillaume and Cheng, Susan
                   and Perola, Markus and Valsta, Liisa and Alfthan,
@@ -730,7 +729,7 @@
   status =	 {bioscience}
 }
 
-@article{Whittaker1960,
+@Article{Whittaker1960,
   author =	 {Whittaker, R. H.},
   title =	 {Vegetation of the Siskiyou Mountains, Oregon and
                   California},
@@ -746,7 +745,7 @@
   year =	 {1960}
 }
 
-@article{ancombc2020,
+@Article{ancombc2020,
   title =	 {Analysis of compositions of microbiomes with bias
                   correction},
   author =	 {Huang Lin and Shyamal Das Peddada},
@@ -759,7 +758,7 @@
   url =		 {https://www.nature.com/articles/s41467-020-17041-7},
 }
 
-@article{Aubert2021,
+@Article{Aubert2021,
   title =	 {Model-based biclustering for overdispersed count
                   data with application in microbial ecology},
   author =	 {Aubert, Julie and Schbath, Sophie and Robin, St{\'e}phane},
@@ -800,7 +799,7 @@
   institution =	 {Technical report}
 }
 
-@book{Chambers2008,
+@Book{Chambers2008,
   title =	 {Software for data analysis: programming with R},
   author =	 {Chambers, John M},
   volume =	 2,
@@ -851,14 +850,14 @@
   url =		 {https://arxiv.org/abs/1903.11695},
 }
 
-@book{gentleman2008r,
+@Book{gentleman2008r,
   title =	 {R programming for bioinformatics},
   author =	 {Gentleman, Robert},
   year =	 {2008},
   publisher =	 {CRC Press}
 }
 
-@article{Gu2016,
+@Article{Gu2016,
   title =	 {Complex heatmaps reveal patterns and correlations in
                   multidimensional genomic data},
   author =	 {Gu, Zuguang and Eils, Roland and Schlesner,
@@ -871,7 +870,7 @@
   publisher =	 {Oxford University Press}
 }
 
-@article{Hintikka2021,
+@Article{Hintikka2021,
   title =	 {Xylo-Oligosaccharides in Prevention of Hepatic
                   Steatosis and Adipose Tissue Inflammation:
                   Associating Taxonomic and Metabolomic Patterns in
@@ -953,7 +952,7 @@
   doi =		 {10.1093/nar/gkv007}
 }
 
-@article{Das2020,
+@Article{Das2020,
   title =	 {Analysis of Compositions of Microbiomes with Bias
                   Correction},
   author =	 {Lin, Huang and Peddada, Shyamal Das},
@@ -981,7 +980,7 @@
   url =		 {http://huttenhower.sph.harvard.edu/maaslin2},
 }
 
-@article{Paulson2017,
+@Article{Paulson2017,
   title =	 {Longitudinal differential abundance analysis of
                   marker-gene surveys using smoothing splines},
   author =	 {JN Paulson and H Talukder and HC Bravo},
@@ -1031,7 +1030,7 @@
                   https://github.com/thomasp85/patchwork}
 }
 
-@article{Silverman2017,
+@Article{Silverman2017,
   title =	 {A phylogenetic transform enhances analysis of
                   compositional microbiota data},
   author =	 {Justin D Silverman and Alex D Washburne and Sayan
@@ -1049,11 +1048,11 @@
                   plotly, and shiny},
   publisher =	 {Chapman and Hall/CRC},
   year =	 {2020},
-  isbn =	 9781138331457,
+  isbn =	 {9781138331457},
   url =		 {https://plotly-r.com}
 }
 
-@article{Quinn2021,
+@Article{Quinn2021,
   title =	{A {{Critique}} of {{Differential Abundance
                   Analysis}}, and {{Advocacy}} for an {{Alternative}}},
   author = {Quinn, Thomas P. and Gordon-Rodriguez, Elliott and Erb, Ionas},
@@ -1088,7 +1087,7 @@
   url =		 {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
-@article{Nearing2022,
+@Article{Nearing2022,
   title = {Microbiome Differential Abundance Methods Produce Different Results across 38 Datasets},
   author = {Nearing, Jacob T. and Douglas, Gavin M. and Hayes, Molly G. and MacDonald, Jocelyn and Desai, Dhwani K. and Allward, Nicole and Jones, Casey M. A. and Wright, Robyn J. and Dhanani, Akhilesh S. and Comeau, Andr{\'e} M. and Langille, Morgan G. I.},
   year =	 {2022},
@@ -1103,7 +1102,7 @@
   file = {/Users/henrikeckermann/Zotero/storage/RL7S8KYH/Nearing et al. - 2022 - Microbiome differential abundance methods produce .pdf}
 }
 
-@article{Mandal2015,
+@Article{Mandal2015,
   title = {Analysis of Composition of Microbiomes: A Novel Method for Studying Microbial Composition},
   shorttitle = {Analysis of Composition of Microbiomes},
   author = {Mandal, Siddhartha and Van Treuren, Will and White, Richard A. and Eggesb{\o}, Merete and Knight, Rob and Peddada, Shyamal D.},
@@ -1118,7 +1117,7 @@
   file = {/Users/henrikeckermann/Zotero/storage/Z2JYHTAK/Mandal et al. - 2015 - Analysis of composition of microbiomes a novel me.pdf}
 }
 
-@article{McCarthy2017,
+@Article{McCarthy2017,
   author =	 {Davis J. McCarthy and Kieran R. Campbell and Aaron
                   T. L. Lun and Quin F. Willis},
   title =	 {Scater: pre-processing, quality control,
@@ -1132,7 +1131,7 @@
   doi =		 {10.1093/bioinformatics/btw777}
 }
 
-@article{Sprockett2020,
+@Article{Sprockett2020,
   title = {Microbiota Assembly, Structure, and Dynamics among {{Tsimane}} Horticulturalists of the {{Bolivian Amazon}}},
   author = {Sprockett, Daniel D. and Martin, Melanie and Costello, Elizabeth K. and Burns, Adam R. and Holmes, Susan P. and Gurven, Michael D. and Relman, David A.},
   year =	 {2020},
@@ -1147,7 +1146,7 @@
   file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
 }
 
-@article{davis2018simple,
+@Article{davis2018simple,
   title={Simple statistical identification and removal of contaminant sequences in marker-gene and metagenomics data},
   author={Davis, Nicole M and Proctor, Diana M and Holmes, Susan P and Relman, David A and Callahan, Benjamin J},
   journal={Microbiome},
@@ -1158,7 +1157,7 @@
   publisher={Springer}
 }
 
-@article{mcmurdie2014waste,
+@Article{mcmurdie2014waste,
   title={Waste not, want not: why rarefying microbiome data is inadmissible},
   author={McMurdie, Paul J and Holmes, Susan},
   journal={PLoS computational biology},
@@ -1177,7 +1176,7 @@
 https://github.com/thomasp85/patchwork},
   }
 
-@article{Gloor2016,
+@Article{Gloor2016,
   title = {Displaying {{Variation}} in {{Large Datasets}}: {{Plotting}} a {{Visual Summary}} of {{Effect Sizes}}},
   shorttitle = {Displaying {{Variation}} in {{Large Datasets}}},
   author = {Gloor, Gregory B. and Macklaim, Jean M. and Fernandes, Andrew D.},
@@ -1193,7 +1192,7 @@ https://github.com/thomasp85/patchwork},
   file = {/Users/henrikeckermann/Zotero/storage/RE6XBPGQ/Gloor et al. - 2016 - Displaying Variation in Large Datasets Plotting a.pdf}
 }
 
-@article{Zhou2022,
+@Article{Zhou2022,
   title = {{{LinDA}}: Linear Models for Differential Abundance Analysis of Microbiome Compositional Data},
   shorttitle = {{{LinDA}}},
   author = {Zhou, Huijuan and He, Kejun and Chen, Jun and Zhang, Xianyang},
