--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -468,7 +468,7 @@ plot <-plotReducedDim(tse_Genus,"PCoA_BC", colour_by = "most_abundant") +
 plot
 ```
 
-Note: A 3D interactive version of the earlier plot can be found from /@ref(extras).
+Note: A 3D interactive version of the earlier plot can be found from \@ref(extras).
 
 Similarly let's visualize and compare the sub-population.
 
