Fix broken cross-references

--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -191,7 +191,7 @@ same object, which can be evaluated with the following coordination methods:
 * `runUMAP`
 
 Since these clustering techniques allow for multiple coordinates or components,
-**coordination plots** can also span multiple dimensions, which is explained in chapter \@ref{extras}.
+**coordination plots** can also span multiple dimensions, which is explained in chapter \@ref(extras).
 
 ```{r}
 # perform NMDS coordination method
@@ -635,7 +635,7 @@ plot
 
 Heatmaps find several other applications in biclustering and multi-assay
 analyses, that are discussed in chapters \@ref(clustering) and
-\@ref(multi-assay_analyses), where the packages _cobiclust_ and _MOFA2_ are of interest.
+\@ref(multi-assay-analyses), where the packages _cobiclust_ and _MOFA2_ are of interest.
 
 
 ## Session Info {-}
