--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -1,4 +1,4 @@
-# Multi-assay analyses {#multi-assay_analyses}
+# Multi-assay analyses {#multi-assay-analyses}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
