--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -33,7 +33,7 @@ library(mia)
 library(mia)
 data(GlobalPatterns, package="mia")
 tse <- GlobalPatterns
-tse <- transformSamples(tse, method="relabundance")
+tse <- transformCounts(tse, MARGIN = "samples", method="relabundance")
 
 molten_tse <- meltAssay(tse,
                         add_row_data = TRUE,
