--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -334,21 +334,23 @@ tse_phylum <- agglomerateByRank(tse,
                                 rank = "Phylum",
                                 onRankOnly = TRUE)
 # Add clr-transformation on samples
-tse_phylum <- transformSamples(tse_phylum, method = "relabundance", pseudocount = 1)
-tse_phylum <- transformSamples(tse_phylum, method = "clr", assay_name = "relabundance")
+tse_phylum <- transformCounts(tse_phylum, method = "relabundance", pseudocount = 1)
+tse_phylum <- transformCounts(tse_phylum, method = "clr", assay_name = "relabundance")
 # Add z-transformation on features (taxa)
-tse_phylum <- transformFeatures(tse_phylum, assay_name = "clr", 
-                                method = "z", name = "clr_z")
+tse_phylum <- transformCounts(tse_phylum, assay_name = "clr",
+                              MARGIN = "features", 
+                              method = "z", name = "clr_z")
 
 # Takes subset: only samples from feces, skin, or tongue
 tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
 # Does clr-transformation
-tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "relabundance", pseudocount = 1)
-tse_phylum_subset <- transformSamples(tse_phylum_subset, method = "clr", assay_name = "relabundance")
+tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "relabundance", pseudocount = 1)
+tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "clr", assay_name = "relabundance")
 # Does z-transformation
-tse_phylum_subset <- transformFeatures(tse_phylum_subset, assay_name = "clr", 
-                                       method = "z", name = "clr_z")
+tse_phylum_subset <- transformCounts(tse_phylum_subset, assay_name = "clr",
+                                     MARGIN = "features", 
+                                     method = "z", name = "clr_z")
 
 # Get n most abundant taxa, and subsets the data by them
 top_taxa <- getTopTaxa(tse_phylum_subset, top = 20)
