--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -120,7 +120,7 @@ Computing the euclidean PCoA and storing it as a data frame
 
 ```{r}
 # Does clr transformation. Pseudocount is added, because data contains zeros.
-tse <- transformSamples(tse, method = "relabundance", pseudocount = 1)
+tse <- transformCounts(tse, method = "relabundance", pseudocount = 1)
 tse <- transformCounts(tse, assay_name = "relabundance", method = "clr")
 
 library(scater)
@@ -174,7 +174,7 @@ library(scater)
 
 data("enterotype", package="mia")
 tse <- enterotype
-tse <- transformSamples(tse, method = "relabundance")
+tse <- transformCounts(tse, method = "relabundance")
 tse <- transformCounts(tse, method = "rclr")
 
 # Performing and storing UMAP
