--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -44,8 +44,8 @@ Only the most prevalent taxa are included in analysis.
 # Subset data in the first experiment
 mae[[1]] <- subsetByPrevalentTaxa(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
 # clr-transform in the first experiment
-mae[[1]] <- transformSamples(mae[[1]], method = "relabundance", pseudocount = 1)
-mae[[1]] <- transformSamples(mae[[1]], "relabundance", method = "clr")
+mae[[1]] <- transformCounts(mae[[1]], method = "relabundance", pseudocount = 1)
+mae[[1]] <- transformCounts(mae[[1]], "relabundance", method = "clr")
 ```
 
 _cobiclust_ takes counts table as an input and gives _cobiclust_ object as an output.
@@ -83,7 +83,9 @@ if(!require(pheatmap)){
     library(pheatmap)
 }
 # z-transform for heatmap
-mae[[1]] <- transformFeatures(mae[[1]], assay_name = "clr", method = "z", name = "clr_z")
+mae[[1]] <- transformCounts(mae[[1]], assay_name = "clr",
+                            MARGIN = "features",
+                            method = "z", name = "clr_z")
 
 # Create annotations. When column names are equal, they should share levels. 
 # Here samples include 3 clusters, and taxa 2. That is why we have to make 
