--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -88,7 +88,7 @@ plot_ly(reduced_data, x=~PC1,y=~PC2,z=~PC3) %>%
 ```{r}
 library("vegan")
 data("enterotype")
-enterotype <- transformSamples(enterotype, method = "relabundance")
+enterotype <- transformCounts(enterotype, method = "relabundance")
 # Drop those samples that do not have meta dtaa
 enterotype <- 
     enterotype[ , !rowSums(is.na(colData(enterotype)[, c("Nationality", "Gender","ClinicalStatus")]) > 0 ) ]
