--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -43,7 +43,7 @@ data(hitchip1006)
 tse <- hitchip1006
 
 # Add relative abundances
-tse <- transformSamples(tse, method = "relabundance")
+tse <- transformCounts(tse, MARGIN = "samples", method = "relabundance")
 
 library(miaViz)
 plotAbundanceDensity(tse, layout = "jitter", assay_name = "relabundance",
