--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -89,7 +89,7 @@ with concentrations of individual metabolites. This helps as to answer the quest
 # Agglomerate microbiome data at family level
 mae[[1]] <- agglomerateByPrevalence(mae[[1]], rank = "Family")
 # Does log10 transform for microbiome data
-mae[[1]] <- transformSamples(mae[[1]], method = "log10", pseudocount = 1)
+mae[[1]] <- transformCounts(mae[[1]], method = "log10", pseudocount = 1)
 
 # Give unique names so that we do not have problems when we are creating a plot
 rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]])
@@ -179,10 +179,14 @@ mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
 mae[[1]] <- transformCounts(mae[[1]], assay_name = "relabundance", method = "rclr")
 
 # Transforming metabolomic data with log10
-mae[[2]] <- transformSamples(mae[[2]], assay_name = "nmr", method = "log10")
+mae[[2]] <- transformCounts(mae[[2]], assay_name = "nmr",
+                            MARGIN = "samples",
+                            method = "log10")
 
 # Transforming biomarker data with z-transform
-mae[[3]] <- transformFeatures(mae[[3]], assay_name = "signals", method = "z", pseudocount = 1)
+mae[[3]] <- transformCounts(mae[[3]], assay_name = "signals",
+                            MARGIN = "features",
+                            method = "z", pseudocount = 1)
 
 # Removing assays no longer needed
 assay(mae[[1]], "counts") <- NULL
