--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -334,7 +334,9 @@ tse_phylum <- agglomerateByRank(tse,
                                 rank = "Phylum",
                                 onRankOnly = TRUE)
 # Add clr-transformation on samples
-tse_phylum <- transformCounts(tse_phylum, method = "relabundance", pseudocount = 1)
+assay(tse_phylum, "pseudo") <- assay(tse_phylum, "counts") + 1
+tse_phylum <- transformCounts(tse_phylum, assay_name = "pseudo",
+                              method = "relabundance")
 tse_phylum <- transformCounts(tse_phylum, method = "clr", assay_name = "relabundance")
 # Add z-transformation on features (taxa)
 tse_phylum <- transformCounts(tse_phylum, assay_name = "clr",
