--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -58,7 +58,9 @@ techniques, we can visualize the abundances at Phylum level.
 ```{r heatmap}
 library(ggplot2)
 # Add clr-transformation on samples
-tse_phylum <- transformCounts(tse_phylum, method = "relabundance", pseudocount = 1)
+assay(tse_phylum, "pseudo") <- assay(tse_phylum, "counts") + 1
+tse_phylum <- transformCounts(tse_phylum, assay_name = "pseudo",
+                              method = "relabundance")
 tse_phylum <- transformCounts(tse_phylum, assay_name = "relabundance", method = "clr")
 # Add z-transformation on features (taxa)
 tse_phylum <- transformCounts(tse_phylum, assay_name = "clr", 
