--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -181,7 +181,8 @@ For complete list of available transformations and parameters, see function
 [help](https://microbiome.github.io/mia/reference/transformCounts.html).
 
 ```{r}
-tse <- transformCounts(tse, method = "relabundance")
+assay(tse_, "pseudo") <- assay(tse, "counts") + 1
+tse <- transformCounts(tse, assay_name = "pseudo", method = "relabundance")
 tse <- transformCounts(x = tse, assay_name = "relabundance", method = "clr", 
                         pseudocount = 1, name = "clr_transformation")
 
