--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -45,7 +45,7 @@ Only the most prevalent taxa are included in analysis.
 mae[[1]] <- subsetByPrevalentTaxa(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
 # clr-transform in the first experiment
 mae[[1]] <- transformCounts(mae[[1]], method = "relabundance", pseudocount = 1)
-mae[[1]] <- transformCounts(mae[[1]], "relabundance", method = "clr")
+mae[[1]] <- transformCounts(mae[[1]], "relabundance", method = "rclr")
 ```
 
 _cobiclust_ takes counts table as an input and gives _cobiclust_ object as an output.
