--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -46,9 +46,10 @@ tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 tse <- subsetTaxa(tse, is.element(rownames(tse), rel_taxa))
 
 # CLR and Z transforms
+assay(tse, "pseudo") <- assay(tse, "counts") + 1
 tse <- transformCounts(tse, MARGIN = "samples", method = "relabundance")
 tse <- transformCounts(tse, MARGIN = "samples", assay_name = "relabundance",
-                       method = "clr", pseudocount = 1)
+                       method = "clr")
 tse <- transformCounts(tse, MARGIN = "features", assay_name = "clr", method = "z")
 
 Countries <- data.frame("Country" = colData(tse)$Country)
@@ -219,10 +220,11 @@ Looking at heatmaps of the CSTs can reveal structure on a different level. Using
 
 ```{r message = FALSE, warning = FALSE, results = FALSE}
 # Z transform of CLR counts
+assay(tse, "pseudo") <- assay(tse, "counts") + 1
 tse2 <- transformCounts(tse2, MARGIN = "samples", assay_name = "counts",
                         method = "relabundance")
 tse2 <- transformCounts(tse2, MARGIN = "samples", assay_name = "relabundance",
-                        method = "clr", pseudocount = 1)
+                        method = "clr")
 tse2 <- transformCounts(tse2, MARGIN = "features", assay_name = "clr", method = "z")
 # get top taxa
 tse2 <- subsetTaxa(tse2, is.element(rownames(tse2), rel_taxa))
@@ -382,7 +384,8 @@ Visualise dmm clusters in a heatmap.
 
 ```{r}
 # get clr + z-transformed counts
-tse_dmn <- transformCounts(tse_dmn, assay_name = "counts", method = "relabundance")
+assay(tse_dmn, "pseudo") <- assay(tse_dmn, "counts") + 1
+tse_dmn <- transformCounts(tse_dmn, assay_name = "pseudo", method = "relabundance")
 tse_dmn <- transformCounts(tse_dmn, assay_name = "relabundance", method = "clr", pseudocount = 1)
 tse_dmn <- transformCounts(tse_dmn, MARGIN = "features",
                            assay_name = "clr", method = "z")
