--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -39,7 +39,8 @@ Let's first preprocess the data.
 tse <- agglomerateByRank(tse, rank = "order")
 
 # Apply CLR transform
-tse <- transformCounts(tse, method = "relabundance", pseudocount = 1)
+assay(tse, "pseudo") <- assay(tse, "counts") + 1
+tse <- transformCounts(tse, assay_name = "pseudo", method = "relabundance")
 tse <- transformCounts(tse, assay_name = "relabundance", method = "clr")
 
 # Get assay
