--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -347,7 +347,8 @@ tse_phylum <- transformCounts(tse_phylum, assay_name = "clr",
 tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
 # Does clr-transformation
-tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "relabundance", pseudocount = 1)
+assay(tse_phylum_subset, "pseudo") <- assay(tse_phylum_subset, "counts") + 1
+tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "relabundance", assay_name = "pseudo")
 tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "clr", assay_name = "relabundance")
 # Does z-transformation
 tse_phylum_subset <- transformCounts(tse_phylum_subset, assay_name = "clr",
