--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -348,8 +348,10 @@ tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces"
 
 # Does clr-transformation
 assay(tse_phylum_subset, "pseudo") <- assay(tse_phylum_subset, "counts") + 1
-tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "relabundance", assay_name = "pseudo")
-tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "clr", assay_name = "relabundance")
+tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "relabundance",
+                                     assay_name = "pseudo")
+tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "clr",
+                                     assay_name = "relabundance")
 # Does z-transformation
 tse_phylum_subset <- transformCounts(tse_phylum_subset, assay_name = "clr",
                                      MARGIN = "features", 
